src/test/error/undefinedfunc.c
int func() {
    return "123";
}
int main() {
    a();
}
